# dsfmt-rs

./: Cargo.toml  LICENSE  LICENSE-SFMT
benches/: bench.rs
src/: lib.rs  mt19937.rs
tests/: test.rs
